Fix text overflow appearance

--- a/packages/loom-ui/src/renderer/Navigator/NodeNavigator.scss
+++ b/packages/loom-ui/src/renderer/Navigator/NodeNavigator.scss
@@ -10,8 +10,6 @@
   position: relative;
   align-items: center;
   height: 27px;
-  display: flex;
-  flex-flow: row nowrap;
 
   &__text i      { color: #CCCCCC; }
   &__element i   { color: #60A060; }
